--- a/Backend/package.json
+++ b/Backend/package.json
@@ -26,7 +26,7 @@
     "morgan": "^1.9.0",
     "mysql": "^2.15.0",
     "nexmo": "^2.1.1",
-    "nodemailer": "^0.7.1",
+    "nodemailer": ">=6.4.16",
     "path": "^0.12.7",
     "pm2": "^2.9.1",
     "request": "^2.83.0",
